<resources>
    <string name="app_name">Movie Catalog</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv">TV Show</string>
    <string name="score_list">Score : </string>
    <string name="genre_list">Genres : </string>
    <string name="content_desc">Click me, i have description</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="title_tv_mv">Title Mv Tv</string>
    <string name="release_tv_mv">Release Mv Tv</string>
    <string name="score_tv_mv">Score Mv Tv</string>
    <string name="genres_tv_mv">Genres Mv Tv</string>
    <string name="status_tv_mv">Status Mv Tv</string>
    <string name="runtime_tv_mv">Runtime Mv Tv</string>
    <string name="original_language_tv_mv">Original Language Mv Tv</string>
    <string name="overview_tv_mv">Overview Mv Tv</string>
    <string name="sub_release">Release Date</string>
    <string name="sub_score">Score</string>
    <string name="sub_genres">Genres</string>
    <string name="sub_status">Status</string>
    <string name="sub_runtime">Runtime</string>
    <string name="sub_original_language">Original Language</string>
    <string name="sub_overview">Overview</string>
    <string-array name="data_title_tv">
        <item>Arrow</item>
        <item>Dragon Ball</item>
        <item>Fairy Tail</item>
        <item>Family Guy</item>
        <item>Marvel\’s\ Iron Fist</item>
        <item>Naruto Shippuden</item>
        <item>NCIS</item>
        <item>Supergirl</item>
        <item>The Simpsons</item>
        <item>The Walking Dead</item>
    </string-array>
    <string-array name="data_release_tv">
        <item>October 10, 2012</item>
        <item>February 26, 1986</item>
        <item>October 12, 2009</item>
        <item>January 31, 1999</item>
        <item>March 17, 2017</item>
        <item>February 15, 2007</item>
        <item>September 23, 2003</item>
        <item>October 26, 2015</item>
        <item>December 17, 1989</item>
        <item>October 31, 2010</item>
    </string-array>
    <string-array name="data_score_tv">
        <item>58/100</item>
        <item>71/100</item>
        <item>65/100</item>
        <item>65/100</item>
        <item>61/100</item>
        <item>76/100</item>
        <item>69/100</item>
        <item>60/100</item>
        <item>72/100</item>
        <item>73/100</item>
    </string-array>
    <string-array name="data_status_tv">
        <item>Returning Series</item>
        <item>Ended</item>
        <item>Ended</item>
        <item>Returning Series</item>
        <item>Canceled</item>
        <item>Ended</item>
        <item>Returning Series</item>
        <item>Returning Series</item>
        <item>Returning Series</item>
        <item>Returning Series</item>
    </string-array>
    <string-array name="data_runtime_tv">
        <item>42 minute</item>
        <item>25 minute</item>
        <item>25 minute</item>
        <item>22 minute</item>
        <item>55 minute</item>
        <item>25 minute</item>
        <item>45 minute</item>
        <item>42 minute</item>
        <item>22 minute</item>
        <item>42 minute, 60 minute, 45 minute</item>
    </string-array>
    <string-array name="data_genres_tv">
        <item>Crime, Drama, Mystery, Action and Adventure</item>
        <item>Comedy, Sci-fi and Fantasy, Animation, Action and Adventure</item>
        <item>Action and Adventure, Animation, Comedy, Sci-fi and Fantasy</item>
        <item>Animation, Comedy</item>
        <item>Action and Adventure, Drama, Sci-fi and Fantasy</item>
        <item>Animation, Comedy, Drama</item>
        <item>Action and Adventure, Crime, Drama</item>
        <item>Action, Adventure, Drama, Science Fiction</item>
        <item>Animation, Comedy</item>
        <item>Action and Adventure, Drama, Sci-fi and Fantasy</item>
    </string-array>
    <string-array name="data_ori_language_tv">
        <item>English</item>
        <item>Japanese</item>
        <item>Japanese</item>
        <item>English</item>
        <item>English</item>
        <item>Japanese</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
    </string-array>
    <string-array name="data_overview_tv">
        <item>Spoiled billionaire playboy Oliver Queen is missing and presumed dead when his yacht is lost at sea. He returns five years later a changed man, determined to clean up the city as a hooded vigilante armed with a bow.</item>
        <item>Long ago in the mountains, a fighting master known as Gohan discovered a strange boy whom he named Goku. Gohan raised him and trained Goku in martial arts until he died. The young and very strong boy was on his own, but easily managed. Then one day, Goku met a teenage girl named Bulma, whose search for the mystical Dragon Balls brought her to Goku\'s\ home. Together, they set off to find all seven and to grant her wish.</item>
        <item>Lucy is a 17-year-old girl, who wants to be a full-fledged mage. One day when visiting Harujion Town, she meets Natsu, a young man who gets sick easily by any type of transportation. But Natsu isn\'t\ just any ordinary kid, he\'s\ a member of one of the world\'s\ most infamous mage guilds: Fairy Tail.</item>
        <item>Sick, twisted, politically incorrect and Freakin\'\ Sweet animated series featuring the adventures of the dysfunctional Griffin family. Bumbling Peter and long-suffering Lois have three kids. Stewie (a brilliant but sadistic baby bent on killing his mother and taking over the world), Meg (the oldest, and is the most unpopular girl in town) and Chris (the middle kid, he\'s\ not very bright but has a passion for movies). The final member of the family is Brian - a talking dog and much more than a pet, he keeps Stewie in check whilst sipping Martinis and sorting through his own life issues.</item>
        <item>Danny Rand resurfaces 15 years after being presumed dead. Now, with the power of the Iron Fist, he seeks to reclaim his past and fulfill his destiny.</item>
        <item>Naruto Shippuuden is the continuation of the original animated TV series Naruto.The story revolves around an older and slightly more matured Uzumaki Naruto and his quest to save his friend Uchiha Sasuke from the grips of the snake-like Shinobi, Orochimaru. After 2 and a half years Naruto finally returns to his village of Konoha, and sets about putting his ambitions to work, though it will not be easy, as He has amassed a few (more dangerous) enemies, in the likes of the shinobi organization; Akatsuki.</item>
        <item>From murder and espionage to terrorism and stolen submarines, a team of special agents investigates any crime that has a shred of evidence connected to Navy and Marine Corps personnel, regardless of rank or position.</item>
        <item>Twenty-four-year-old Kara Zor-El, who was taken in by the Danvers family when she was 13 after being sent away from Krypton, must learn to embrace her powers after previously hiding them. The Danvers teach her to be careful with her powers, until she has to reveal them during an unexpected disaster, setting her on her journey of heroism.</item>
        <item>Set in Springfield, the average American town, the show focuses on the antics and everyday adventures of the Simpson family; Homer, Marge, Bart, Lisa and Maggie, as well as a virtual cast of thousands. Since the beginning, the series has been a pop culture icon, attracting hundreds of celebrities to guest star. The show has also made name for itself in its fearless satirical take on politics, media and American life in general.</item>
        <item>Sheriff\'s\ deputy Rick Grimes awakens from a coma to find a post-apocalyptic world dominated by flesh-eating zombies. He sets out to find his family and encounters many other survivors along the way.</item>
    </string-array>
    <string-array name="data_title_mv">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bohemian Rhapsody</item>
        <item>Fantastic Beasts: The Crimes of Grindelwald</item>
        <item>Mortal Engines</item>
        <item>Ralph Breaks the Internet</item>
        <item>Robin Hood</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>T-34</item>
    </string-array>
    <string-array name="data_release_mv">
        <item>October 3, 2018</item>
        <item>December 7, 2018</item>
        <item>April 25, 2018</item>
        <item>October 24, 2018</item>
        <item>November 14, 2018</item>
        <item>November 27, 2018</item>
        <item>November 20, 2018</item>
        <item>November 21, 2018</item>
        <item>December 6, 2018</item>
        <item>December 27, 2018</item>
    </string-array>
    <string-array name="data_score_mv">
        <item>75/100</item>
        <item>68/100</item>
        <item>83/100</item>
        <item>80/100</item>
        <item>69/100</item>
        <item>61/100</item>
        <item>72/100</item>
        <item>58/100</item>
        <item>84/100</item>
        <item>55/100</item>
    </string-array>
    <string-array name="data_status_mv">
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
    </string-array>
    <string-array name="data_runtime_mv">
        <item>2 hours 16 minute</item>
        <item>2 hours 24 minute</item>
        <item>2 hours 29 minute</item>
        <item>2 hours 15 minute</item>
        <item>2 hours 14 minute</item>
        <item>2 hours 9 minute</item>
        <item>1 hours 52 minute</item>
        <item>1 hours 56 minute</item>
        <item>1 hours 57 minute</item>
        <item>2 hours 19 minute</item>
    </string-array>
    <string-array name="data_genres_mv">
        <item>Drama, Romance, Music</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Adventure, Action, Science Fiction</item>
        <item>Drama, Music</item>
        <item>Adventure, Fantasy, Family</item>
        <item>Adventure, Fantasy</item>
        <item>Family, Animation, Comedy, Adventure</item>
        <item>Adventure, Action, Thriller</item>
        <item>Action, Adventure, Animation, Science Fiction, Comedy</item>
        <item>War, Action</item>
    </string-array>
    <string-array name="data_ori_language_mv">
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>Russian</item>
    </string-array>
</resources>